--- a/src/components/BookCover.css
+++ b/src/components/BookCover.css
@@ -8,7 +8,7 @@
 }
 .cover-collection {
     width: 100%;
-    height: 80%;
+    height: 100%;
 }
 .cover:hover, .cover-collection:hover {
    
@@ -25,4 +25,38 @@
     transition: all;
     transition-duration: 1s;
     transform: scale(1.2);
+}
+.cover-description {
+    font-size: calc(1vw + 1vh);
+    background-color: #FFE6D0;
+    text-align: center;
+    width: 50%;
+    z-index: 100;
+    
+}
+.hidden {
+    display: none;
+    position: relative;
+    bottom: 30%;
+    right: 1%;
+    
+}
+a:hover + .hidden {
+    display:block;
+    
+}
+.hidden:hover {
+    display:block;
+}
+.hidden-book {
+    display: none;
+    position: relative;
+    bottom: 20%;
+    right: 1%;
+}
+a:hover + .hidden-book {
+    display:block;
+}
+.hidden-book:hover {
+    display:block;
 }
