--- a/src/components/BookList.css
+++ b/src/components/BookList.css
@@ -34,7 +34,7 @@
     width: 100%;
     height: 100%;
     text-align: center;
-    background-color: chartreuse;
+    background-color:#FFE6D0;
     position: relative;
     z-index: 10;
     font-size: 3vh;
