--- a/src/pages/Profile.css
+++ b/src/pages/Profile.css
@@ -31,3 +31,19 @@
     height: calc(10vw + 10vh);
     width: calc(10vw + 10vh);
 }
+.profile-description {
+    width: 15vw;
+    height: calc(3vw + 3vh);
+    background: transparent;
+    border: none;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    position: relative;
+    left: calc(0.5vw - 0.5vh);
+    outline: none;
+    text-align: center;
+    
+}
+.profile-description::-webkit-scrollbar {
+    display: none;
+  }
